--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script defer src="script.js"></script>
+    <title>t3game</title>
   </head>
   <body>
-    <button type="button" id="btn"></button>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
